--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,15 +13,16 @@ jobs:
       with:
         repository: matthewwong525/linked-blog-starter
         path: blog
-    - name: Install obsidian-export
+    - name: Install Rust / cargo
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
     - run: cargo install obsidian-export
     - run: ~/.cargo/bin/obsidian-export md blog/_commonMD
+    - run: cd blog
     - uses: amondnet/vercel-action@v20
       with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
-        vercel-org-id: matthewwong525 # Required aka user name
-        vercel-project-id: linked-blog-md # Required aka project name
+        vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required (create one in Vercel > Settings > Tokens)
+        vercel-org-id: matthewwong525 # Required (aka user name)
+        vercel-project-id: linked-blog-md # Required (aka project name)
         working-directory: ./blog
