--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,12 +17,10 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
-    - name: Install obsidian-export via Cargo
-      uses: baptiste0928/cargo-install@v1
-      with:
-        crate: obsidian-export
-        version: "22.11.0"  # Most recent version compatible with 0.9
-    - run: ~/.cargo/bin/obsidian-export md blog/_commonMD
+    - name: Install and run obsidian-export
+      run: |
+        cargo install obsidian-export
+        ~/.cargo/bin/obsidian-export md blog/_commonMD
     - run: cd blog
     - run: ls
     - uses: amondnet/vercel-action@v20
