--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish Markdown Files
 env:
-  VERCEL_ORG_ID: matthewwong525 # TODO: Change this
-  VERCEL_PROJECT_ID: linked-blog-md # TODO: Change this
+  BLOG_REPO: matthewwong525/linked-blog-starter
+  PUBLISH_DIR: . # root directory
 on: [push]
 jobs:
   publish:
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout linked blog starter repo
       uses: actions/checkout@v3
       with:
-        repository: matthewwong525/linked-blog-starter
+        repository: ${{ env.BLOG_REPO }}
         path: blog
     - name: Install Rust / cargo
       uses: actions-rs/toolchain@v1
@@ -23,11 +23,11 @@ jobs:
     - name: Install and run obsidian-export
       run: |
         cargo install obsidian-export
-        ~/.cargo/bin/obsidian-export md blog/_commonMD
+        ~/.cargo/bin/obsidian-export md/${{ env.PUBLISH_DIR }} blog/_commonMD
     - name: Install Vercel & Deploy
       run: |
         cd blog
         npm install --global vercel@latest
         vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-        vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-        vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        vercel build --prod --token=${{ secrets.VERCEL_ORG_ID }}
+        vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_PROJECT_ID }}
