--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,14 +7,15 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout linked blog starter repo
-      uses: actions/checkout@v3
-      with:
-        repository: ${{ env.BLOG_REPO }}
     - name: Checkout
       uses: actions/checkout@v3
       with:
-        path: ../md
+        path: temp_md
+    - name: Checkout linked blog starter repo
+      uses: actions/checkout@v3
+      with:
+        path: temp_blog
+        repository: ${{ env.BLOG_REPO }}
     - name: Install Rust / cargo
       uses: actions-rs/toolchain@v1
       with:
@@ -22,8 +23,10 @@ jobs:
     - name: Install and run obsidian-export
       run: |
         cargo install obsidian-export
-        rm -rf _commonMD && mkdir _commonMD
-        ~/.cargo/bin/obsidian-export ../md/${{ env.PUBLISH_DIR }} blog/_commonMD
+        rm -rf temp_blog/_commonMD && mkdir temp_blog/_commonMD
+        ~/.cargo/bin/obsidian-export ../md/${{ env.PUBLISH_DIR }} temp_blog/_commonMD
+        mv temp_blog/.[!.]* .
+        rm -rf temp_blog
     - uses: amondnet/vercel-action@v20 #deploy
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
