--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,8 @@ name: Publish Markdown Files
 env:
   BLOG_REPO: matthewwong525/linked-blog-starter
   PUBLISH_DIR: . # root directory
+  MD_DIR: temp_md
+  BLOG_DIR: temp_blog
 on: [push]
 jobs:
   publish:
@@ -10,23 +12,25 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
       with:
-        path: temp_md
+        path: ${{ env.MD_DIR }}
     - name: Checkout linked blog starter repo
       uses: actions/checkout@v3
       with:
-        path: temp_blog
+        path: ${{ env.BLOG_DIR }}
         repository: ${{ env.BLOG_REPO }}
     - name: Install Rust / cargo
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
-    - name: Install and run obsidian-export
+    - name: Install, run obsidian-export, 
       run: |
         cargo install obsidian-export
-        rm -rf temp_blog/_commonMD && mkdir temp_blog/_commonMD
-        ~/.cargo/bin/obsidian-export ../temp_md/${{ env.PUBLISH_DIR }} temp_blog/_commonMD
-        mv temp_blog/.[!.]* .
-        rm -rf temp_blog
+        rm -rf ${{ env.BLOG_DIR }}/_commonMD && mkdir ${{ env.BLOG_DIR}}/_commonMD
+        ~/.cargo/bin/obsidian-export ./${{ env.MD_DIR }}/${{ env.PUBLISH_DIR }} ${{ env.BLOG_DIR }}/_commonMD
+
+        mv ${{ env.BLOG_DIR}}/* .
+        rm -rf ${{ env.BLOG_DIR }}
+        rm -rf ${{ env.MD_DIR }}
     - uses: amondnet/vercel-action@v20 #deploy
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
