--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,9 @@ env:
   PUBLISH_DIR: . # root directory
   MD_DIR: temp_md
   BLOG_DIR: temp_blog
-on: [push]
+on:
+  push:
+    branches: [main]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -22,16 +24,18 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
-    - name: Install, run obsidian-export, 
+    - name: Install and run obsidian-export
       run: |
         cargo install obsidian-export
         rm -rf ${{ env.BLOG_DIR }}/_commonMD && mkdir ${{ env.BLOG_DIR}}/_commonMD
         ~/.cargo/bin/obsidian-export ./${{ env.MD_DIR }}/${{ env.PUBLISH_DIR }} ${{ env.BLOG_DIR }}/_commonMD
-
+    - name: Move blog dir to currDir
+      run: |
         cp -r ${{ env.BLOG_DIR}}/. .
         rm -rf ${{ env.BLOG_DIR }}
         rm -rf ${{ env.MD_DIR }}
-    - uses: amondnet/vercel-action@v20 #deploy
+    - name: Deploy vercel
+      uses: amondnet/vercel-action@v20 #deploy
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
         vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}  #Required
