session 2 -ic notes

--- a/Next_Stop_The_Apocalypse/.obsidian/app.json
+++ b/Next_Stop_The_Apocalypse/.obsidian/app.json
@@ -1,7 +1,7 @@
 {
   "legacyEditor": false,
   "livePreview": true,
-  "attachmentFolderPath": "ZTemplates/files",
+  "attachmentFolderPath": "ZFiles",
   "showFrontmatter": true,
   "spellcheck": true,
   "spellcheckLanguages": [
